--- a/.gitignore
+++ b/.gitignore
@@ -13,12 +13,20 @@ log_*.txt
 # Compiled FEM
 FEM
 
+# test.xml (not really sure what this is)
+FEM_Stata/Estimation/test.xml
+
+# Model files (built in workflow)
+FEM_CPP_settings/ELSA/models/*.est
+FEM_Stata/Estimates/ELSA/*.ster
+
 # Input data (only need select files the rest are generated)
 input_data/detailed_output/
 input_data/*.dta
+input_data/WIP/
+input_data/validate/*
 FEM_Stata/Makedata/ELSA/*.dta
-!input_data/H_ELSA.dta
-!input_data/ELSA_long.dta
+!input_data/H_ELSA_f_2002-2016.dta
 !input_data/census_pop_estimates_02-18.csv
 !input_data/CT0469_2011census_educ.csv
 !input_data/psid_incoming_cut_points.dta
@@ -30,6 +38,7 @@ FEM_Stata/Makedata/ELSA/*.dta
 
 # Output files
 output/*
+!output/scripts/*
 
 # Jetbrains
 .idea/
