--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,9 @@ FEM_Stata/Estimation/test.xml
 
 # Model files (built in workflow)
 FEM_CPP_settings/ELSA/models/*.est
+FEM_CPP_settings/ELSA/models/crossvalidation/*.est
 FEM_Stata/Estimates/ELSA/*.ster
+FEM_Stata/Estimates/ELSA/crossvalidation/*.ster
 
 # Input data (only need select files the rest are generated)
 input_data/detailed_output/
