--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Stata files
 *.log
 FEM_Stata/Makedata/ELSA/*.log
+FEM_CPP_settings/*.log
 *.gph
 *.png
 
@@ -21,6 +22,7 @@ FEM_Stata/Estimation/test.xml
 # Model files (built in workflow)
 FEM_CPP_settings/ELSA/models/*.est
 FEM_CPP_settings/ELSA/models/crossvalidation/*.est
+FEM_CPP_settings/ELSA_cross-validation/models/*.est
 FEM_Stata/Estimates/ELSA/*.ster
 FEM_Stata/Estimates/ELSA/crossvalidation/*.ster
 
@@ -29,6 +31,7 @@ input_data/detailed_output/
 input_data/*.dta
 input_data/WIP/
 input_data/validate/*
+input_data/cross_validation/*.dta
 FEM_Stata/Makedata/ELSA/*.dta
 !input_data/H_ELSA_f_2002-2016.dta
 !input_data/census_pop_estimates_02-18.csv
