--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,9 @@ FEM_Stata/Makedata/ELSA/*.dta
 !input_data/education_data.dta
 !input_data/pop_projections.dta
 
+# Cross validation data
+analysis/techdoc_ELSA/ELSA_2002_2016.dta
+
 # Output files
 output/*
 !output/scripts/*
