--- a/.gitignore
+++ b/.gitignore
@@ -23,9 +23,16 @@ FEM_Stata/Estimation/test.xml
 FEM_CPP_settings/ELSA/models/*.est
 FEM_CPP_settings/ELSA/models/crossvalidation/*.est
 FEM_CPP_settings/ELSA_cross-validation/models/*.est
+FEM_CPP_settings/ELSA_minimal/models/*.est
 FEM_Stata/Estimates/ELSA/*.ster
+FEM_Stata/Estimates/minimal/*.ster
 FEM_Stata/Estimates/ELSA/crossvalidation/*.ster
-FEM_Stata/Estimates/ELSA/minimal/*.ster
+FEM_Stata/Estimates/ELSA_minimal/*.ster
+FEM_Stata/Estimates/ELSA/FEM_estimates_table.xml
+FEM_Stata/Estimates/ELSA/crossvalidation/
+FEM_Stata/Estimates/ELSA/estim_parameters*
+FEM_Stata/Estimates/ELSA/estimatesCV*
+FEM_Stata/Estimates/ELSA/estimatesELSA*
 
 # Input data (only need select files the rest are generated)
 input_data/detailed_output/
