Ignored summary_output_ELSA_* files

--- a/.gitignore
+++ b/.gitignore
@@ -64,4 +64,4 @@ FEM_CPP/.idea/
 
 # Summary output file (generated)
 FEM_CPP_settings/summary_output_ELSA.txt
-
+FEM_CPP_settings/summary_output_ELSA_*
