Lots of changes here made whilst preparing for ERSA conference, most notable is generating a couple of extra stock and repl populations for the no smoking and no drinking scenarios

--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,6 @@ FEM_R/*.nb.html
 .Rhistory
 input_data/.RData
 input_data/*.mids
+
+# hotdeck intermediate data files
+FEM_Stata/Makedata/hotdeck_data/*.dta
