Included call to install nrow package from ssc, and changed the Makefile to install these packages automatically when running the FEM. Also ignored the stata_extensions.txt in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,5 @@ input_data/*.mids
 FEM_Stata/Makedata/ELSA/hotdeck_data/*.dta
 FEM_Stata/Makedata/ELSA/hotdeck_data/
 
+# stata_extensions
+stata_extensions.txt
