ELSA_init_transition.do now works for both cross validation 1 and 2 separately. Cross validation 2 restricts the transition models to only use waves 1-4 as input

--- a/.gitignore
+++ b/.gitignore
@@ -27,10 +27,14 @@ FEM_CPP_settings/ELSA_cross-validation/models/*.est
 FEM_CPP_settings/ELSA_minimal/models/*.est
 FEM_Stata/Estimates/ELSA/*.ster
 FEM_Stata/Estimates/minimal/*.ster
-FEM_Stata/Estimates/ELSA/crossvalidation/*.ster
+FEM_Stata/Estimates/ELSA/crossvalidation1/*.ster
+FEM_Stata/Estimates/ELSA/crossvalidation1/*.xml
+FEM_Stata/Estimates/ELSA/crossvalidation2/*.xls
+FEM_Stata/Estimates/ELSA/crossvalidation2/*.ster
+FEM_Stata/Estimates/ELSA/crossvalidation2/*.xml
+FEM_Stata/Estimates/ELSA/crossvalidation2/*.xls
 FEM_Stata/Estimates/ELSA_minimal/*.ster
 FEM_Stata/Estimates/ELSA/FEM_estimates_table.xml
-FEM_Stata/Estimates/ELSA/crossvalidation/
 FEM_Stata/Estimates/ELSA/estim_parameters*
 FEM_Stata/Estimates/ELSA/estimatesCV*
 FEM_Stata/Estimates/ELSA/estimatesELSA*
