--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@ FEM_Stata/Estimates/ELSA/crossvalidation2/*.ster
 FEM_Stata/Estimates/ELSA/crossvalidation2/*.xml
 FEM_Stata/Estimates/ELSA/crossvalidation2/*.xls
 FEM_Stata/Estimates/ELSA_minimal/*.ster
+FEM_Stata/Estimates/ELSA_minimal/*.csv
 FEM_Stata/Estimates/ELSA/FEM_estimates_table.xml
 FEM_Stata/Estimates/ELSA/estim_parameters*
 FEM_Stata/Estimates/ELSA/estimatesCV*
