--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,10 @@ FEM_Stata/Estimates/ELSA/estim_parameters*
 FEM_Stata/Estimates/ELSA/estimatesCV*
 FEM_Stata/Estimates/ELSA/estimatesELSA*
 FEM_Stata/Estimates/minimal/CV/*.ster
+FEM_Stata/Estimates/ELSA_core/*.ster
+FEM_CPP_settings/ELSA_core/models/*.est
+FEM_Stata/Estimates/ELSA_core/*.csv
+FEM_Stata/Estimates/ELSA_core/*.txt
 
 # Input data (only need select files the rest are generated)
 input_data/detailed_output/*.dta
