--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ FEM_CPP_settings/ELSA/models/*.est
 FEM_CPP_settings/ELSA_CV1/models/*.est
 FEM_CPP_settings/ELSA_CV2/models/*.est
 FEM_CPP_settings/ELSA_minimal/models/*.est
+FEM_CPP_settings/*/models/*.est
 FEM_Stata/Estimates/ELSA/*.ster
 FEM_Stata/Estimates/minimal/*.ster
 FEM_Stata/Estimates/ELSA/CV1/*.ster
@@ -38,8 +39,12 @@ FEM_Stata/Estimates/ELSA/CV2/*.csv
 FEM_Stata/Estimates/ELSA/CV2/*.ster
 FEM_Stata/Estimates/ELSA/CV2/*.xml
 FEM_Stata/Estimates/ELSA/CV2/*.xls
+FEM_Stata/Estimates/ELSA_core/*/*.xls
 FEM_Stata/Estimates/ELSA_minimal/*.ster
 FEM_Stata/Estimates/ELSA_minimal/*.csv
+FEM_Stata/Estimates/ELSA_core/*/*.xml
+FEM_Stata/Estimates/ELSA_core/*/*.csv
+FEM_Stata/Estimates/ELSA_core/*/*.ster
 FEM_Stata/Estimates/ELSA/FEM_estimates_table.xml
 FEM_Stata/Estimates/ELSA/estim_parameters*
 FEM_Stata/Estimates/ELSA/estimatesCV*
