--- a/.gitignore
+++ b/.gitignore
@@ -54,6 +54,7 @@ FEM_Stata/Estimates/ELSA_core/*.ster
 FEM_CPP_settings/ELSA_core/models/*.est
 FEM_Stata/Estimates/ELSA_core/*.csv
 FEM_Stata/Estimates/ELSA_core/*.txt
+FEM_Stata/Estimates/*/*.doc
 
 # Input data (only need select files the rest are generated)
 input_data/detailed_output/*.dta
