Modified the ELSA_init_transition.do to work with a new script: ELSA_bootstrap_transition.do. Still works in the old ways as well (hopefully). The new script runs the init_transition script multiple times and saves a set of models from each run in a different folder. These models are all generated using a different sample created with the bsample package. Also additions to reshape_long to generate random_strata for the sampling, because ELSA has no good stratification variable at panel level (all waves specific unfortunately).

--- a/.gitignore
+++ b/.gitignore
@@ -107,3 +107,6 @@ stata_extensions.txt
 # ROC
 FEM_Stata/Makedata/ELSA/roc_img/
 FEM_Stata/Makedata/ELSA/roc_plots/
+
+# bootstrap folders and models
+FEM_Stata/Estimates/ELSA_core_bootstrap/*
