--- a/.gitignore
+++ b/.gitignore
@@ -95,6 +95,7 @@ FEM_CPP_settings/summary_output_ELSA_*
 
 # R files
 FEM_R/*.nb.html
+FEM_R/Alcohol/*
 .Rhistory
 input_data/.RData
 input_data/*.mids
