--- a/.gitignore
+++ b/.gitignore
@@ -114,3 +114,5 @@ FEM_Stata/Makedata/ELSA/roc_plots/
 FEM_Stata/Estimates/ELSA_core/FEM_estimates_table.xml
 FEM_Stata/Estimates/ELSA_core/estimatescore.xls
 
+# visual studio stuff
+.vscode/
