--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,10 @@ FEM_Stata/Estimation/*.log
 *.png
 
 # C++
-*.o
 FEM_CPP/optimized/*.o
 FEM_CPP/optimized/*.d
-*.d
+FEM_CPP/cmake-build-debug/
+FEM_CPP/cmake-build-debug/*
 
 # log files
 log_*.txt
